# colab-cli

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
colab_cli/: cli_new.py  cli_open.py  cli_pull.py  cli_push.py  cli_update.py  gdrive_auth.py  main.py
colab_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
colab_cli/utilities/: checks.py  colab_metadata.py  files.py  folders.py  path_process.py
tests/: test_colab_cli.py
