[tool.poetry]
name = "colab-cli"
version = "0.1.0"
description = ""
authors = ["Akshay Ashok <aks28id@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
colab-cli = "colab_cli.main:app"

[tool.poetry.dependencies]
python = "^3.7"
typer = {extras = ["all"], version = "^0.1.0"}
gitpython = "^3.1.0"
pydrive = "^1.3.1"
Send2Trash = "^1.5.0"
colorama = "^0.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
